--- a/front_end/src/components/css/UploadNote.css
+++ b/front_end/src/components/css/UploadNote.css
@@ -1,12 +1,15 @@
 body{
     background-color: white;
     display: flex;
-    justify-content: center;
+    /*justify-content: center;*/
     align-items: center;
     height: 100vh;
 }
 h1{
     color: black;
+   /* margin-top: 10px;*/
+    margin-left: 40vw;
+    margin-bottom: 60vh;
 }
 
 @media(max-width:540px){
