--- a/front_end/src/components/css/ShowNotes.css
+++ b/front_end/src/components/css/ShowNotes.css
@@ -1,7 +1,5 @@
-body{
-    background-color: white;
-}
+body {
+    background-color: rgb(83, 81, 81) !important;
 
-h1, p, h2{
-    color: black;
-}
+  }
+  
